src/OpenCV5Sharp.Native/opencv5sharp_native.h

extern "C" __declspec(dllexport) double cv_findTransformECCWithMask_0(void* templateImage, void* inputImage, void* templateMask, void* inputMask, void* warpMatrix, int motionType, cv::TermCriteria criteria, int gaussFiltSize);
extern "C" __declspec(dllexport) double cv_findTransformECCMultiScale_0(void* reference, void* sample, void* warpMatrix, void* eccParams, void* referenceMask, void* sampleMask);
extern "C" __declspec(dllexport) void* cv_readOpticalFlow_0(const char* path);
extern "C" __declspec(dllexport) bool cv_writeOpticalFlow_0(const char* path, void* flow);