src/OpenCV5Sharp/Generated/NativeMethods.Video.cs

        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double cv_findTransformECCWithMask_0(MatHandle templateImage, MatHandle inputImage, MatHandle templateMask, MatHandle inputMask, MatHandle warpMatrix, int motionType, TermCriteria criteria, int gaussFiltSize);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double cv_findTransformECCMultiScale_0(MatHandle reference, MatHandle sample, MatHandle warpMatrix, IntPtr eccParams, IntPtr referenceMask, IntPtr sampleMask);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_readOpticalFlow_0([MarshalAs(UnmanagedType.LPUTF8Str)] string? path);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool cv_writeOpticalFlow_0([MarshalAs(UnmanagedType.LPUTF8Str)] string? path, MatHandle flow);
    }
}
